@@ -49,4 +49,6 @@ REL1_10_2:
  - Added 'Log/delete' permission related settings
  - Added 'ShowRedirectPageText' extension
  - Added 'InterWikiLinkManager' extension
+ - Correction & enhancement to ExtensionClass
+ - Correction & enhancement to ViewsourceRight 
  
